[gd_scene load_steps=50 format=2]

[ext_resource path="res://src/Actors/Props/RideChaserMaterial.tres" type="Material" id=1]
[ext_resource path="res://src/Actors/x_collision_box.tres" type="Shape2D" id=2]
[ext_resource path="res://src/Sounds/SLIDE.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Actors/Props/BikeShot.gd" type="Script" id=4]
[ext_resource path="res://src/Sounds/JUMP.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Actors/Props/Accelerate.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Props/Deaccelerate.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Props/BikeRest.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Props/BikeFall.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Props/Bike.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Props/BikeDash.gd" type="Script" id=11]
[ext_resource path="res://src/Actors/Props/BikeJump.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Props/Brake.gd" type="Script" id=13]
[ext_resource path="res://src/Actors/Weapons/AltFire.gd" type="Script" id=14]
[ext_resource path="res://src/Sounds/Bike - Dash.wav" type="AudioStream" id=15]
[ext_resource path="res://src/Actors/Props/BikeDamage.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Props/Death.gd" type="Script" id=17]
[ext_resource path="res://src/Actors/Props/BikeRiden.gd" type="Script" id=18]
[ext_resource path="res://src/Actors/Enemy Collision Detector.gd" type="Script" id=19]
[ext_resource path="res://src/Sounds/DAMAGE.wav" type="AudioStream" id=20]
[ext_resource path="res://src/Effects/Textures/follow_shot.png" type="Texture" id=21]
[ext_resource path="res://src/Actors/Props/WallHit.gd" type="Script" id=22]
[ext_resource path="res://src/Sounds/Bike - RunLoop.wav" type="AudioStream" id=23]
[ext_resource path="res://src/Actors/Props/MeleeHit.gd" type="Script" id=24]
[ext_resource path="res://src/Effects/Materials/RemainsParticleSingleExplosion.tres" type="Material" id=25]
[ext_resource path="res://src/Sounds/59 - MMX - Enemy Die (4).wav" type="AudioStream" id=26]
[ext_resource path="res://src/Actors/Props/Sprites/bike.res" type="SpriteFrames" id=27]
[ext_resource path="res://src/Actors/Weapons/Projectiles/Bike Lemon.tscn" type="PackedScene" id=28]
[ext_resource path="res://src/Actors/Props/Sprites/bike_cannon.res" type="SpriteFrames" id=29]
[ext_resource path="res://src/Effects/Materials/RideChaserSmokes.tres" type="Material" id=30]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=31]
[ext_resource path="res://src/Sounds/Bike - Land.wav" type="AudioStream" id=32]
[ext_resource path="res://src/Sounds/Bike - Mount.wav" type="AudioStream" id=33]
[ext_resource path="res://src/Actors/Props/BikeHyperDash.gd" type="Script" id=34]
[ext_resource path="res://src/Effects/Textures/hyperdash.tres" type="SpriteFrames" id=35]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=36]
[ext_resource path="res://src/Effects/Textures/remains_bike.png" type="Texture" id=37]
[ext_resource path="res://src/Effects/Materials/RideChaserParticles.tres" type="Material" id=38]
[ext_resource path="res://src/Actors/Props/BikeSlopeJump.gd" type="Script" id=39]
[ext_resource path="res://src/Effects/Materials/ExplosionParticles.tres" type="Material" id=41]
[ext_resource path="res://src/Effects/Remains.gd" type="Script" id=42]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=43]

[sub_resource type="CanvasItemMaterial" id=31]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=20]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = true

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 7, 9 )

[sub_resource type="CapsuleShape2D" id=246]
radius = 6.9
height = 0.0

[sub_resource type="CanvasItemMaterial" id=210]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=66]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=12]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="RideChaser" type="KinematicBody2D" groups=["Bike", "Props"]]
pause_mode = 1
z_index = 3
collision_layer = 0
collision_mask = 536938241
script = ExtResource( 10 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 1 )
position = Vector2( 0, -3.99 )
z_index = 1
frames = ExtResource( 27 )
animation = "stop"
frame = 14
playing = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="animatedSprite"]
visible = false
position = Vector2( 0, 3.99 )
scale = Vector2( 0.6, 1.6 )

[node name="particles2D" type="Particles2D" parent="animatedSprite"]
material = SubResource( 31 )
position = Vector2( -30, 10.99 )
z_index = -4
emitting = false
amount = 3
lifetime = 0.25
local_coords = false
process_material = ExtResource( 38 )
texture = ExtResource( 21 )

[node name="Smoke Particles" type="Particles2D" parent="animatedSprite"]
material = SubResource( 20 )
position = Vector2( 6, 18.99 )
emitting = false
amount = 15
lifetime = 0.75
local_coords = false
process_material = ExtResource( 30 )
texture = ExtResource( 31 )

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 10
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 6 )
shape = SubResource( 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
z_index = 1
shape = SubResource( 246 )

[node name="collisionPolygon2D" type="CollisionPolygon2D" parent="."]
z_index = 1
polygon = PoolVector2Array( -3, 15, 3, 15, 7, 8, 7, -15, -7, -15, -7, 8 )

[node name="Enemy Collision Detector" type="KinematicBody2D" parent="." groups=["Player", "Player Projectile", "Props"]]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy Collision Detector"]
visible = false
shape = ExtResource( 2 )

[node name="_raycasts" type="Node2D" parent="."]

[node name="Wallcheck Right" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, -14 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 67073

[node name="Wallcheck Right2" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, -7 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 67073

[node name="Wallcheck Right3" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, 13 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 67073

[node name="Wallcheck Left" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, -14 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 67073

[node name="Wallcheck Left2" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, -7 )
enabled = true
exclude_parent = false
cast_to = Vector2( -6, 0 )
collision_mask = 67073

[node name="Wallcheck Left3" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, 13 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 67073

[node name="WallJumpCast Right" type="RayCast2D" parent="_raycasts"]
visible = false
position = Vector2( 2, -14 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 1537

[node name="WallJumpCast Right2" type="RayCast2D" parent="_raycasts"]
visible = false
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 1537

[node name="WallJumpCast Right3" type="RayCast2D" parent="_raycasts"]
visible = false
position = Vector2( 2, 15 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 1537

[node name="WallJumpCast Left" type="RayCast2D" parent="_raycasts"]
visible = false
position = Vector2( -2, -14 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 1537

[node name="WallJumpCast Left2" type="RayCast2D" parent="_raycasts"]
visible = false
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 1537

[node name="WallJumpCast Left3" type="RayCast2D" parent="_raycasts"]
visible = false
position = Vector2( -2, 15 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 1537

[node name="GroundCast" type="RayCast2D" parent="_raycasts"]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 1537

[node name="_crush_raycasts" type="Node2D" parent="."]
visible = false

[node name="death_up" type="RayCast2D" parent="_crush_raycasts"]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="death_down" type="RayCast2D" parent="_crush_raycasts"]
enabled = true
cast_to = Vector2( 0, -15 )

[node name="death_right" type="RayCast2D" parent="_crush_raycasts"]
enabled = true
cast_to = Vector2( 7, 0 )

[node name="death_left" type="RayCast2D" parent="_crush_raycasts"]
enabled = true
cast_to = Vector2( -7, 0 )

[node name="Riden" type="Node2D" parent="."]
script = ExtResource( 18 )
conflicting_moves = [ "Nothing" ]
sound = ExtResource( 23 )

[node name="audioStreamPlayer" type="AudioStreamPlayer2D" parent="Riden"]
stream = ExtResource( 23 )
max_distance = 480.0
bus = "SFX"

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Riden"]
stream = ExtResource( 33 )
volume_db = -17.417
bus = "SFX"

[node name="Fire" type="Node2D" parent="."]
script = ExtResource( 14 )
conflicting_moves = [ "Nothing" ]
actions = [ "fire", "alt_fire" ]
normal_sprites = ExtResource( 27 )
arm_pointing_sprites = ExtResource( 29 )

[node name="Buster" type="Node2D" parent="Fire"]
script = ExtResource( 4 )
shots = [ ExtResource( 28 ) ]
max_shots_alive = 64
max_ammo = 1.0
ammo_per_shot = 0.0

[node name="WallHit" type="Node2D" parent="."]
script = ExtResource( 22 )
conflicting_moves = [ "Nothing" ]

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 16 )
conflicting_moves = [ "Nothing" ]
actions = [ "Event" ]
sound = ExtResource( 20 )
horizontal_velocity = 0.0
duration_time = 0.048
invulnerability_time = 0.75

[node name="audioStreamPlayer" type="AudioStreamPlayer2D" parent="Damage"]
volume_db = -6.568
max_distance = 400.0
bus = "SFX"

[node name="Jump" type="Node2D" parent="."]
script = ExtResource( 12 )
conflicting_moves = [ "HyperDash" ]
actions = [ "jump" ]
animation = "wheelie"
sound = ExtResource( 5 )
horizontal_velocity = 320.0
deacceleration = 150.0
leeway_time = 0.08

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="Jump"]
stream = ExtResource( 5 )
pitch_scale = 0.5
bus = "SFX"

[node name="Dash" type="Node2D" parent="."]
script = ExtResource( 11 )
conflicting_moves = [ "Jump", "Brake", "HyperDash", "Fall" ]
actions = [ "dash" ]
animation = "boost_start"
sound = ExtResource( 15 )
horizontal_velocity = 420.0
jump_velocity = 250.0
acceleration = 1200.0

[node name="audioStreamPlayer" type="AudioStreamPlayer2D" parent="Dash"]
volume_db = 2.087
pitch_scale = 1.05
max_distance = 400.0
bus = "SFX"

[node name="HyperDash" type="Node2D" parent="."]
script = ExtResource( 34 )
actions = [ "dash" ]
animation = "wheelie"
sound = ExtResource( 15 )
horizontal_velocity = 460.0
duration = 0.65

[node name="audioStreamPlayer" type="AudioStreamPlayer2D" parent="HyperDash"]
volume_db = 2.087
pitch_scale = 1.14
max_distance = 400.0
bus = "SFX"

[node name="hyperdash_effect" type="AnimatedSprite" parent="HyperDash"]
visible = false
material = ExtResource( 1 )
position = Vector2( 0, -4 )
z_index = 10
frames = ExtResource( 35 )
playing = true

[node name="Accelerate" type="Node2D" parent="."]
script = ExtResource( 6 )
conflicting_moves = [ "Jump", "Brake", "Dash", "HyperDash" ]
actions = [ "move_left", "move_right", "move_left_analog", "move_right_analog" ]
animation = "boost"
sound = ExtResource( 3 )
horizontal_velocity = 320.0
acceleration = 320.0

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="Accelerate"]
volume_db = -5.135
bus = "SFX"

[node name="Brake" type="Node2D" parent="."]
script = ExtResource( 13 )
conflicting_moves = [ "Jump", "Accelerate", "HyperDash" ]
actions = [ "move_left", "move_right", "move_left_analog", "move_right_analog" ]
animation = "break"
sound = ExtResource( 3 )
brake_speed = 580.0

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="Brake"]
volume_db = 7.7
pitch_scale = 0.44
bus = "SFX"

[node name="Deaccelerate" type="Node2D" parent="."]
script = ExtResource( 7 )
conflicting_moves = [ "Accelerate", "Brake", "Jump", "Fall", "Dash", "HyperDash" ]

[node name="Rest" type="Node2D" parent="."]
script = ExtResource( 8 )
conflicting_moves = [ "Anything" ]
animation = "stop"

[node name="Fall" type="Node2D" parent="."]
script = ExtResource( 9 )
conflicting_moves = [ "Anything" ]
animation = "wheelie"
acceleration = 50.0
deacceleration = 25.0

[node name="Death" type="Node2D" parent="."]
position = Vector2( 21, -2 )
script = ExtResource( 17 )
conflicting_moves = [ "Nothing" ]
actions = [ "Event" ]

[node name="Explosion Particles" type="Particles2D" parent="Death"]
material = SubResource( 210 )
position = Vector2( -21, 0.5 )
z_index = 5
z_as_relative = false
emitting = false
amount = 15
lifetime = 2.0
local_coords = false
process_material = ExtResource( 41 )
texture = ExtResource( 43 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Death"]
stream = ExtResource( 26 )
volume_db = -10.6
max_distance = 400.0
bus = "SFX"

[node name="Remains" type="Particles2D" parent="Death"]
material = SubResource( 66 )
position = Vector2( 0, 0.5 )
z_index = 10
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
local_coords = false
process_material = ExtResource( 25 )
texture = ExtResource( 43 )
script = ExtResource( 42 )

[node name="remains_particles" type="Particles2D" parent="Death/Remains"]
material = SubResource( 12 )
z_index = -1
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 36 )
texture = ExtResource( 37 )

[node name="timer" type="Timer" parent="Death/Remains"]
wait_time = 2.0
one_shot = true

[node name="Shot Position" type="Node2D" parent="."]
position = Vector2( 37, 2 )

[node name="Melee" type="Node2D" parent="."]
script = ExtResource( 24 )
conflicting_moves = [ "Nothing" ]
actions = [ "Event" ]
start_event = "melee_hit"
receive_parameter = true
force_start = true

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 32 )
volume_db = -19.901
max_distance = 400.0
bus = "SFX"

[node name="SlopeJump" type="Node2D" parent="."]
script = ExtResource( 39 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 5.5, 1.7 )

[connection signal="timeout" from="Death/Remains/timer" to="Death/Remains" method="_on_timer_timeout"]
[connection signal="screen_entered" from="visibilityNotifier2D" to="." method="_on_visibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="visibilityNotifier2D" to="." method="_on_visibilityNotifier2D_screen_exited"]
